--- a/style.css
+++ b/style.css
@@ -2,9 +2,7 @@
     margin: 0;
     font-family: 'Open Sans', sans-serif;
 }
-.title{
 
-}
 .desc{
     font-size: 16px;
     color: #444343;
@@ -15,6 +13,7 @@
     font-size: 50px;
     color: #151414;
 }
+/* banner section is start */
 .banner-section{
     background-image: url(images/banner/banner2.png);
     height: 100vh;
@@ -36,7 +35,6 @@
 font-size: 65px;
 font-weight: 900px;
 }
-.banner-desc{}
 .main-btn{
     padding: 20px 35px;
     background: #f15b22;
@@ -77,15 +75,15 @@ font-weight: 900px;
     background-image: url(images/watch.png);
     background-repeat: no-repeat;
     margin: 130px 230px;
+    position: relative;
     /* justify-content: center;
     align-items: center; */
     
 }
 .pm-text{
     padding: 40px;
-    z-index: 2;
-    
-    
+    z-index: 1;
+    color: white;    
 }
 .btn-white{
     padding: 15px 30px;
@@ -106,6 +104,34 @@ font-weight: 900px;
     min-height: 300px;
     position: absolute;   
 }
+/* My portfolio styles */
+.my-portfolio{
+    padding: 0 400px;
+    margin-bottom: 130px;   
+}
+.mp-title{
+    justify-content: center;
+    align-items: center;
+    display: flex;
+}
+.portfolio-box{ 
+    text-align: center; 
+    display: flex;
+    padding: 22px 60px;
+    gap: 24px;
+    box-shadow: 2px 2px 10px;   
+    background: #FFF8F3;
+}
+.box-detail{
+    border-radius: 5px;
+    padding: 30px;
+    box-shadow: 0px 6px 50px rgba(0, 0, 0, 0.06);
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+}
+
 /* Future section styles */
 .future{
     display: flex;
@@ -114,6 +140,7 @@ font-weight: 900px;
     background: #151414;
     color: white;
     height: 577px
+    
 }
 .email{
     text-decoration: none;
@@ -125,10 +152,23 @@ font-weight: 900px;
     border-radius: 5px;
     width: 200px;
     margin-bottom: 15px;
+    
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
     -ms-border-radius: 5px;
     -o-border-radius: 5px;
+}
+
+
+/* footer section styles */
+.footer{
+    height: 50px;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    background: #f15b22;
+    color: white;
 }
  
 
