--- a/style.css
+++ b/style.css
@@ -76,6 +76,7 @@ font-weight: 900px;
     background-repeat: no-repeat;
     margin: 130px 230px;
     position: relative;
+    display: flex;
     /* justify-content: center;
     align-items: center; */
     
@@ -107,20 +108,27 @@ font-weight: 900px;
 /* My portfolio styles */
 .my-portfolio{
     padding: 0 400px;
-    margin-bottom: 130px;   
+    margin-bottom: 130px;
+    
 }
 .mp-title{
     justify-content: center;
     align-items: center;
     display: flex;
 }
-.portfolio-box{ 
-    text-align: center; 
+.portfolio-box{
+    text-align: center;
     display: flex;
     padding: 22px 60px;
+    border-radius: 5px;
     gap: 24px;
-    box-shadow: 2px 2px 10px;   
-    background: #FFF8F3;
+    box-shadow: 2px 2px 10px;
+    /*background: #FFF8F3;
+    */background: #f5f5f5;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
 }
 .box-detail{
     border-radius: 5px;
